Support for OAuth 2.0 Implicit Flow - Support for redirect URIs of applications - Some security measures - Refactoring of the /:api end point to make it a little less callbacky. - Some changes to the help pages.
